# juejin-release-mcp

./: .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  GIT_SETUP.md  README.md  juejin-mcp-实施计划.md  mcp-config.json  pyproject.toml
docs/: api_testing_conclusions.md
juejin-mcp-skill/: README.md  SKILL.md  examples.md  reference.md
mcps/user-juejin/: MCP_PROTOCOL.md  SERVER_METADATA.json
mcps/user-juejin/prompts/: article_writing_guide.json
mcps/user-juejin/tools/: create_draft.json  delete_article.json  delete_draft.json  get_article.json  get_user_info.json  list_articles.json  list_categories.json  list_drafts.json  list_tags.json  publish_article.json  update_article.json  update_draft.json
scripts/: publish_rootseeker_once.py
src/user_juejin/: __init__.py  config.py  mcp_instructions.py  server.py
src/user_juejin/clients/: __init__.py  juejin_client.py
src/user_juejin/models/: __init__.py  request.py  response.py
src/user_juejin/services/: __init__.py  article_service.py
tests/: test_config.py  test_debug_api.py  test_full_cookie.py  test_models.py  test_real_api.py
